# Nexus-AI-Financial-Data-Pipeline-Insights

./: .env.example  .gitignore  LEEME.txt  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docs/: ARCHITECTURE.md  LOCAL_RUN.md
scripts/: init_db.sql
src/nexus_ai/application/ingestion/: ingestor.py  websocket_client.py
src/nexus_ai/application/processing/: news_processor.py  tick_processor.py
src/nexus_ai/apps/ingestor/: main.py
src/nexus_ai/apps/mock_ws/: server.py
src/nexus_ai/apps/processor/: main.py
src/nexus_ai/common/: errors.py  logging.py
src/nexus_ai/config/: settings.py
src/nexus_ai/domain/models/: market_data.py  news.py
src/nexus_ai/domain/ports/: anomaly.py  sentiment.py
src/nexus_ai/infrastructure/anomaly/: adaptive_zscore.py
src/nexus_ai/infrastructure/nlp/: finbert.py
src/nexus_ai/infrastructure/postgres/: pool.py  repositories.py
src/nexus_ai/infrastructure/redis/: client.py  streams.py  timeseries.py
