[project]
name = "nexus-ai"
version = "0.1.0"
description = "Financial data infrastructure & AI enrichment engine (Clean Architecture, Asyncio, Redis, Postgres, FinBERT)."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "redis>=5.0",
  "asyncpg>=0.29",
  "websockets>=12.0",
  "structlog>=24.1",
  "transformers>=4.42",
  "torch>=2.2"
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5",
  "mypy>=1.10"
]
